Fixes spacing

--- a/app/components/ui/Navigation/MobileNavigation.module.scss
+++ b/app/components/ui/Navigation/MobileNavigation.module.scss
@@ -5,7 +5,7 @@
   position: absolute;
   border-top: 1px solid $gray-300;
   border-bottom: 1px solid $gray-300;
-  right: $spacing-6;
+  right: 0;
   top: $header-height;
   background: $white;
   width: 400px;
